[package]
name = "rust-rest-api"
version = "0.1.0"
authors = ["helabenkhalfallah <helabenkhalfallah@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2"
actix-rt = "1"
mongodb = "0.9.2"
bson = "0.14.0"
serde = "1.0.103"
futures = "0.3.4"
env_logger = "0.7"
dotenv = "0.15.0"
actix-cors = "0.2.0"